--- a/lifecycle-data/products/microsoft-system-center-essentials-2010.yml
+++ b/lifecycle-data/products/microsoft-system-center-essentials-2010.yml
@@ -1,18 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft System Center Essentials 2010
-  description: Microsoft System Center Essentials 2010 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: c657d727b62f52b45ba09ee02472b1d5e5c133bb
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Microsoft System Center Essentials 2010 volgt het vaste levenscyclus beleid.
+  ms.date: 08/21/2020
+  ms.openlocfilehash: 469c101b597227f04b8e412e71b888037fc38577
+  ms.sourcegitcommit: 58c6a4bf0c3ef066969422e3acf340702facef6e
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811936"
+  ms.lasthandoff: 08/21/2020
+  ms.locfileid: "906243"
 name: Microsoft System Center Essentials 2010
 summary: >+
-  Microsoft System Center Essentials 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft System Center Essentials 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
+
+  Dit geldt voor de volgende versies: alle van toepassing zijnde wSQL
 
 products:
 - msc
@@ -25,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 07/28/2010
   endDate: 10/13/2020
-content: ''
+content: "\n\n\n## <a name=\"editions\"></a>Edition \n* Allemaal van toepassing\n* wSQL"
