--- a/lifecycle-data/products/powerpoint-2013.yml
+++ b/lifecycle-data/products/powerpoint-2013.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: PowerPoint 2013
-  description: PowerPoint 2013 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 0fedb46f520e61546bca7e664f1bcb0f04d5b10d
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: PowerPoint 2013 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: 04ce16dd515217f7697f3cf2cc1a0ad22cd3ea19
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852077"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "926934"
 name: PowerPoint 2013
 summary: >+
-  PowerPoint 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  PowerPoint 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/11/2023
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
