--- a/lifecycle-data/products/project-2010.yml
+++ b/lifecycle-data/products/project-2010.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project 2010
-  description: Project 2010 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: e9ac4a6d3a0fb9211ebad118c74feb650769620b
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Project 2010 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Professional,Standard
+  ms.openlocfilehash: bdfc3db9732d902f753335f6457b960248667476
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812296"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "926564"
 name: Project 2010
 summary: >+
-  Project 2010 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Project 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Professional, Standard
+  Dit is van toepassing op de volgende edities: Professional, Standard
 
 products:
 - office
@@ -33,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 07/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Professionele\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard"
