--- a/lifecycle-data/products/project-2013.yml
+++ b/lifecycle-data/products/project-2013.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project 2013
-  description: Project 2013 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 4e9a8e347d9ae095408a296473f39bb5bd05f924
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Project 2013 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Professional,Standard
+  ms.openlocfilehash: a0c7b1031c25aa1c64ea6ba3c0176ec83e4071b6
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851903"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "926453"
 name: Project 2013
 summary: >+
-  Project 2013 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Project 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Professional, Standard
+  Dit is van toepassing op de volgende edities: Professional, Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/11/2023
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Professionele\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard"
