--- a/lifecycle-data/products/project-2019.yml
+++ b/lifecycle-data/products/project-2019.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project 2019
-  description: Project 2019 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 45a8867c9d0b7cde39aa153cc117dfb17a180dea
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  description: Project 2019 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Professional,Standard
+  ms.openlocfilehash: 9507d81cd2cf3bd70765d9fa9f51806cf7c5d16b
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868778"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "926342"
 name: Project 2019
 summary: >+
-  Project 2019 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Project 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Professional, Standard
+  Dit is van toepassing op de volgende edities: Professional, Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 09/24/2018
   endDate: 10/14/2025
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Professionele\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard"
