--- a/lifecycle-data/products/publisher-2016.yml
+++ b/lifecycle-data/products/publisher-2016.yml
@@ -2,19 +2,20 @@
 metadata:
   title: Publisher 2016
   description: Publisher 2016 volgt het vaste levenscyclus beleid.
-  ms.date: 08/12/2020
-  ms.openlocfilehash: a322719add91ae148f88f299df8b002f076400e0
-  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: da399cd636aa0fe84a000ab93878bcf08c27f446
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "893012"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "926120"
 name: Publisher 2016
 summary: >+
   Publisher 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 09/22/2015
   endDate: 10/14/2025
-content: "\n\n\n## <a name=\"editions\"></a>Edition \n* Verre"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
