--- a/lifecycle-data/products/publisher-2019.yml
+++ b/lifecycle-data/products/publisher-2019.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Uitgever 2019
-  description: Publisher 2019 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: f53e12f3cba5f7484fe5eeaa522d0fdcc8e1cb2f
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  title: Publisher 2019
+  description: Publisher 2019 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: d5b325ec4e796963976fe8fe923ba6c5ce81b1bf
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868775"
-name: Uitgever 2019
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "926416"
+name: Publisher 2019
 summary: >+
-  Publisher 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Publisher 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 09/24/2018
   endDate: 10/14/2025
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
