--- a/lifecycle-data/products/microsoft-visual-foxpro-90.yml
+++ b/lifecycle-data/products/microsoft-visual-foxpro-90.yml
@@ -1,17 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Visual FoxPro 9.0
-  description: Microsoft Visual FoxPro 9.0 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: e21a4d7b031b3a982181f2bf975886672be36735
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Microsoft Visual FoxPro 9,0
+  description: Microsoft Visual FoxPro 9,0 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Professional
+  ms.openlocfilehash: 689e9849afd320715a3f700c08beee645de18060
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811930"
-name: Microsoft Visual FoxPro 9.0
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "929302"
+name: Microsoft Visual FoxPro 9,0
 summary: >+
-  Microsoft Visual FoxPro 9.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Visual FoxPro 9,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
   Dit geldt voor de volgende edities: Professional
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 12/22/2004
   endDate: 01/13/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Professionele"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Professional"
