--- a/lifecycle-data/products/microsoft-word-2010.yml
+++ b/lifecycle-data/products/microsoft-word-2010.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Word 2010
-  description: Microsoft Word 2010 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: f4dc0eea07b8fda561c124386c9483135851e2c2
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Microsoft Word 2010 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Home and Student,Standard
+  ms.openlocfilehash: 23a0866d6135a39d7b7895604cc2c3687c5f578f
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812304"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "929006"
 name: Microsoft Word 2010
 summary: >+
-  Microsoft Word 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Word 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Home and Student, Standard
+  Dit is van toepassing op de volgende edities: Thuisgebruik en Studenten, Standaard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 10/13/2020
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Thuis en student\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Studenten\n* Standard"
