--- a/lifecycle-data/products/office-live-meeting.yml
+++ b/lifecycle-data/products/office-live-meeting.yml
@@ -1,16 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Office Live Meeting
-  description: Office Live Meeting volgt het beleid voor moderne levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: c4b0ff8ddce1b4b699aae7631879845eed849bf4
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Office Live Meeting volgt het moderne levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: f5d328b887173c82655f707e9d931266c2d7b857
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812300"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "928895"
 name: Office Live Meeting
-summary: "Office Live Meeting volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.\n\nDit geldt voor de volgende edities: Standaard\n\n> [!IMPORTANT]\n> Ondersteuning voor deze service is beëindigd. Zie de migratiebegeleiding hieronder. \n"
+summary: "Office Live Meeting volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.\n\nDit is van toepassing op de volgende edities: Standard\n\n> [!IMPORTANT]\n> Ondersteuning voor deze service is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
 - office
 policyType: modern-online
@@ -21,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 04/10/2009
   endDate: 12/31/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://support.office.com/article/Live-Meeting-Server-End-of-Life-6af25745-1f4a-4bcd-8051-fd0766f53c4f)\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://support.office.com/article/Live-Meeting-Server-End-of-Life-6af25745-1f4a-4bcd-8051-fd0766f53c4f)\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
