--- a/lifecycle-data/products/office-xp.yml
+++ b/lifecycle-data/products/office-xp.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Office XP
   description: In Office XP wordt het vaste levenscyclus beleid gevolgd.
-  ms.date: 08/27/2020
-  ms.openlocfilehash: fd2a7430cd31be1b9ad81287f9c583fbc2eba5fe
-  ms.sourcegitcommit: 0adb28bbd953e938286d5b8fb03cab57a2d18b3b
+  ms.date: 09/01/2020
+  keywords: Developer,Professional,Proofing Tools,Standard,Web Components
+  ms.openlocfilehash: 5f0e3d5738f2f2107926d4cfe9c46de77fa5a875
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/27/2020
-  ms.locfileid: "922835"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "928784"
 name: Office XP
 summary: >+
   In Office XP wordt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid gevolgd.
