--- a/lifecycle-data/products/outlook-2010.yml
+++ b/lifecycle-data/products/outlook-2010.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Outlook 2010
-  description: Outlook 2010 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 54e6783e437f7a61c6e49b3b81ff496cc8a765f9
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Outlook 2010 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard,with Business Contact Manager
+  ms.openlocfilehash: ce67d67737e2a942507d26d8d1bd308697a58144
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812299"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "928821"
 name: Outlook 2010
 summary: >+
-  Outlook 2010 volgt het beleid [voor](/lifecycle/policies/fixed) vaste levenscyclus.
+  Outlook 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standard, met Business Contact Manager
+  Dit geldt voor de volgende edities: standaard voor Business Contact Manager
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 10/13/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/DeployOffice/office-2010-end-support-roadmap)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard\n* met Business Contact Manager"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/DeployOffice/office-2010-end-support-roadmap)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Standard\n* met Business Contact Manager"
